; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_mcp-core.c_mcp_host_alloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_mcp-core.c_mcp_host_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mcp = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32, i32*, %struct.device* }
%struct.device = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@mcp_bus_type = common dso_local global i32 0, align 4
@mcp_release = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.mcp* @mcp_host_alloc(%struct.device* %0, i64 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.mcp*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = add i64 32, %6
  %8 = trunc i64 %7 to i32
  %9 = load i32, i32* @GFP_KERNEL, align 4
  %10 = call %struct.mcp* @kzalloc(i32 %8, i32 %9)
  store %struct.mcp* %10, %struct.mcp** %5, align 8
  %11 = load %struct.mcp*, %struct.mcp** %5, align 8
  %12 = icmp ne %struct.mcp* %11, null
  br i1 %12, label %13, label %34

13:                                               ; preds = %2
  %14 = load %struct.mcp*, %struct.mcp** %5, align 8
  %15 = getelementptr inbounds %struct.mcp, %struct.mcp* %14, i32 0, i32 1
  %16 = call i32 @spin_lock_init(i32* %15)
  %17 = load %struct.device*, %struct.device** %3, align 8
  %18 = load %struct.mcp*, %struct.mcp** %5, align 8
  %19 = getelementptr inbounds %struct.mcp, %struct.mcp* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 3
  store %struct.device* %17, %struct.device** %20, align 8
  %21 = load %struct.mcp*, %struct.mcp** %5, align 8
  %22 = getelementptr inbounds %struct.mcp, %struct.mcp* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 2
  store i32* @mcp_bus_type, i32** %23, align 8
  %24 = load %struct.device*, %struct.device** %3, align 8
  %25 = getelementptr inbounds %struct.device, %struct.device* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.mcp*, %struct.mcp** %5, align 8
  %28 = getelementptr inbounds %struct.mcp, %struct.mcp* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  store i32 %26, i32* %29, align 4
  %30 = load i32, i32* @mcp_release, align 4
  %31 = load %struct.mcp*, %struct.mcp** %5, align 8
  %32 = getelementptr inbounds %struct.mcp, %struct.mcp* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  store i32 %30, i32* %33, align 8
  br label %34

34:                                               ; preds = %13, %2
  %35 = load %struct.mcp*, %struct.mcp** %5, align 8
  ret %struct.mcp* %35
}

declare dso_local %struct.mcp* @kzalloc(i32, i32) #1

declare dso_local i32 @spin_lock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
